# Neural-Networks-from-Scratch-in-cpp

./: CMakeLists.txt  README.md  build.sh  log_predictions.txt  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
mnist-configs/: input.config
src/: Base.hpp  Data.hpp  FullyConnected.hpp  Initializers.hpp  Loss.hpp  NeuralNetwork.hpp  Optimizers.hpp  ReLU.hpp  SoftMax.hpp  labels_reader.cpp  main.cpp  mnist_reader.cpp
